--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.esp filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.pdn filter=lfs diff=lfs merge=lfs -text
+*.fla filter=lfs diff=lfs merge=lfs -text
